version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/MeshControls/AutomaticMethod.rst.txt
.. vale off



:class:`AutomaticMethod`
========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.MeshControls.AutomaticMethod(internalObject: Any)
              AutomaticMethod(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Defines a AutomaticMethod.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AutomaticMethod

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GenerateMesh`
            - Generate the Mesh.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnDefinition`
            - Run the RenameBasedOnDefinition action.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Gets the Active.
          * - :py:attr:`~AggressiveInflateOption`
            - Gets or sets the AggressiveInflateOption.
          * - :py:attr:`~AggressiveTetImprovement`
            - Gets or sets the AggressiveTetImprovement.
          * - :py:attr:`~Algorithm`
            - Gets or sets the Algorithm.
          * - :py:attr:`~ApproximativeNumberOfElementsPerPart`
            - Gets or sets the ApproximativeNumberOfElementsPerPart.
          * - :py:attr:`~AutoCollapseShortEdges`
            - Gets or sets the AutoCollapseShortEdges.
          * - :py:attr:`~AutoPinchFaces`
            - Gets or sets the AutoPinchFaces.
          * - :py:attr:`~AutoPinchTolerance`
            - Gets or sets the AutoPinchTolerance.
          * - :py:attr:`~AutoRemoveThinFaces`
            - Gets or sets the AutoRemoveThinFaces.
          * - :py:attr:`~AutoRepairFeatureAngle`
            - Gets or sets the AutoRepairFeatureAngle.
          * - :py:attr:`~AutoRepairPartialDefeature`
            - Gets or sets the AutoRepairPartialDefeature.
          * - :py:attr:`~AutoSharpAngle`
            - Gets or sets the AutoSharpAngle.
          * - :py:attr:`~AutoShortEdgeLength`
            - Gets or sets the AutoShortEdgeLength.
          * - :py:attr:`~AutoThinFaceWidth`
            - Gets or sets the AutoThinFaceWidth.
          * - :py:attr:`~AutomaticNodeMovement`
            - Gets or sets the AutomaticNodeMovement method under PCTet.
          * - :py:attr:`~BFCartSubType`
            - Gets the BFCartSubType.
          * - :py:attr:`~BFCartTolerance`
            - Gets the BFCartTolerance.
          * - :py:attr:`~BodyStackingType`
            - Gets or sets the BodyStackingType.
          * - :py:attr:`~CartSweepSpacingOption`
            - Gets or sets the  CartSweep SpacingOption in Multizone ( 0 = Uniform, 1 = Key-Points).
          * - :py:attr:`~CartesianSize`
            - Gets or sets the CartesianSize in Multizone.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Clearence`
            - Gets or sets the Clearence.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~ConstrainBoundary`
            - Gets or sets the ConstrainBoundary.
          * - :py:attr:`~ControlMessages`
            - Gets the ControlMessages.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the CoordinateSystem.
          * - :py:attr:`~CornerAngle`
            - Gets or sets the CornerAngle.
          * - :py:attr:`~CurvatureNormalAngle`
            - Gets or sets the CurvatureNormalAngle.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DecompositionType`
            - Gets or sets the DecompositionType in Multizone.
          * - :py:attr:`~DefeatureLayerVolume`
            - Gets or sets the DefeatureLayerVolume.
          * - :py:attr:`~DefeaturingTolerance`
            - Gets or sets the DefeaturingTolerance.
          * - :py:attr:`~DefinedBy`
            - Gets or sets the DefinedBy.
          * - :py:attr:`~ElementMidsideNodes`
            - Gets or sets the ElementMidsideNodes.
          * - :py:attr:`~ElementOption`
            - Gets or sets the ElementOption.
          * - :py:attr:`~ElementOrder`
            - Gets or sets the ElementOrder.
          * - :py:attr:`~FaceProximityGapFactor`
            - Gets or sets the FaceProximityGapFactor for PCTet.
          * - :py:attr:`~FallBackMeshType`
            - Gets or sets the FallBackMeshType.
          * - :py:attr:`~FeatureAngle`
            - Gets or sets the FeatureAngle.
          * - :py:attr:`~FeatureProtectionAngle`
            - Gets or sets the DihedralAngle for AutoNodeMove under PCTet.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~FilletCollapse`
            - Gets or sets the FilletCollapse for AutoNodeMove under PCTet ( 0 = No, 1 = ProgramControlled ).
          * - :py:attr:`~FillingDirection`
            - Gets or sets the FillingDirection.
          * - :py:attr:`~FillingFraction`
            - Gets or sets the FillingFraction.
          * - :py:attr:`~FreeFaceMeshType`
            - Gets or sets the FreeFaceMeshType.
          * - :py:attr:`~FreeMeshType`
            - Gets or sets the FreeMeshType.
          * - :py:attr:`~GenerateLayersUsingFacets`
            - Gets or sets the GenerateLayersUsingFacets.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~ImprovementIterations`
            - Gets or sets the ImprovementIterations for AutoNodeMove under PCTet.
          * - :py:attr:`~InflateRelativeTolerance`
            - Gets or sets the InflateRelativeTolerance.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~KeyPointsSelection`
            - Gets or sets the KeyPointsSelection.
          * - :py:attr:`~KeyPointsTolerance`
            - Gets or sets the KeyPoints Tolerance in Multizone.
          * - :py:attr:`~LateralDefeatureSize`
            - Gets or sets the LateralDefeatureSize.
          * - :py:attr:`~LayerHeight`
            - Gets or sets the LayerHeight.
          * - :py:attr:`~LayerStart`
            - Gets or sets the LayerStart.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~MZSweepNumberDivisions`
            - 
          * - :py:attr:`~MappedSweptType`
            - Gets or sets the MappedSweptType.
          * - :py:attr:`~MatchMeshWherePossible`
            - Gets or sets the MatchMeshWherePossible.
          * - :py:attr:`~MaximumElementSize`
            - Gets or sets the MaximumElementSize.
          * - :py:attr:`~MeshBasedDefeaturing`
            - Gets or sets the MeshBasedDefeaturing.
          * - :py:attr:`~MeshFlowControl`
            - Gets or sets the MeshFlowControl.
          * - :py:attr:`~MeshInCenter`
            - Gets or sets the MeshInCenter.
          * - :py:attr:`~MeshType`
            - Gets or sets the MeshType.
          * - :py:attr:`~MeshUsingVoxelization`
            - Gets or sets the MeshUsingVoxelization.
          * - :py:attr:`~Method`
            - Gets or sets the Method.
          * - :py:attr:`~MinimumEdgeLength`
            - Gets the MinimumEdgeLength.
          * - :py:attr:`~MinimumSizeLimit`
            - Gets or sets the MinimumSizeLimit.
          * - :py:attr:`~MinimumThickness`
            - Gets or sets the MinimumThickness for PCTet.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~NamedSelection`
            - Gets or sets the NamedSelection.
          * - :py:attr:`~NumberOfCellsAcrossGap`
            - Gets or sets the NumberOfCellsAcrossGap.
          * - :py:attr:`~NumberOfElementLayers`
            - Gets or sets the NumberOfElementLayers for PCTet.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~OverlappingAngle`
            - Gets or sets the OverlappingAngle.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~PartialFill`
            - Gets or sets the PartialFill.
          * - :py:attr:`~ParticleCoordinateSystem`
            - Gets or sets the ParticleCoordinateSystem.
          * - :py:attr:`~ParticleDiameter`
            - Gets or sets the ParticleDiameter.
          * - :py:attr:`~PreserveBoundaries`
            - Gets or sets the PreserveBoundaries.
          * - :py:attr:`~PrimeMethodAutoRepair`
            - Gets or sets the PrimeMethodAutoRepair.
          * - :py:attr:`~ProjectCornersToTop`
            - Gets or sets the ProjectCornersToTop.
          * - :py:attr:`~ProjectInConstantZPlane`
            - Gets or sets the ProjectInConstantZPlane.
          * - :py:attr:`~ProjectionFactor`
            - Gets or sets the ProjectionFactor.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RadialGrowthRate`
            - Gets or sets the RadialGrowthRate.
          * - :py:attr:`~RefineAtThinSection`
            - Gets or sets the RefineAtThinSection for PCTet.
          * - :py:attr:`~RefineSurfaceMesh`
            - Gets or sets the RefineSurfaceMesh for PCTet.
          * - :py:attr:`~Refinement`
            - Gets or sets the Refinement.
          * - :py:attr:`~RelativeTolerance`
            - Gets or sets the PrimeRelativeTolerance.
          * - :py:attr:`~RemoveSharpAngleFaces`
            - Gets or sets the RemoveSharpAngleFaces.
          * - :py:attr:`~RepairFacets`
            - Gets or sets the RepairFacets.
          * - :py:attr:`~RestrictNodeMovementsToSurface`
            - Gets or sets the RestrictNodeMovementsToSurface for AutoNodeMove under PCTet.
          * - :py:attr:`~ReuseBlocking`
            - Gets or sets the ReuseBlocking.
          * - :py:attr:`~ScopingMethod`
            - Gets or sets the ScopingMethod.
          * - :py:attr:`~ShowAdvancedImproveOptions`
            - Gets or sets the ShowAdvancedImproveOptions for AutoNodeMove under PCTet.
          * - :py:attr:`~SlicerFeatureAngle`
            - Gets or sets the SlicerFeatureAngle.
          * - :py:attr:`~SliverTriangleHeight`
            - Gets or sets the SliverTriangleHeight.
          * - :py:attr:`~SmoothMeshSpacing`
            - Gets or sets the SmoothMeshSpacing in Multizone.
          * - :py:attr:`~SmoothTransition`
            - Gets or sets the SmoothTransition.
          * - :py:attr:`~SolidShellElementForStacker`
            - Gets or sets the SolidShellElementForStacker.
          * - :py:attr:`~SolidShellElementForStackerGeometrySelection`
            - Gets or sets the SolidShellElementForStackerGeometrySelection.
          * - :py:attr:`~SolidShellElementForStackerNamedSelection`
            - Gets or sets the SolidShellElementForStackerNamedSelection.
          * - :py:attr:`~SolidShellElementForStackerScopingMethod`
            - Gets or sets the SolidShellElementForStackerScopingMethod.
          * - :py:attr:`~SourceLocation`
            - Gets or sets the SourceLocation.
          * - :py:attr:`~SourceTargetSelection`
            - Gets or sets the SourceTargetSelection.
          * - :py:attr:`~SpacingOption`
            - Gets or sets the SpacingOption.
          * - :py:attr:`~SplitAngle`
            - Gets or sets the SplitAngle in Multizone.
          * - :py:attr:`~StackerCoordinateSystem`
            - Gets or sets the StackerCoordinateSystem.
          * - :py:attr:`~StackerFreeFaceMeshType`
            - Gets or sets the StackerFreeFaceMeshType.
          * - :py:attr:`~StackerTriangleReduction`
            - Gets or sets the StackerTriangleReduction.
          * - :py:attr:`~StackingAxis`
            - Gets or sets the StackingAxis.
          * - :py:attr:`~StackingDefeatureSize`
            - Gets or sets the StackingDefeatureSize.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~StretchFactorX`
            - Gets or sets the StretchFactorX.
          * - :py:attr:`~StretchFactorY`
            - Gets or sets the StretchFactorY.
          * - :py:attr:`~StretchFactorZ`
            - Gets or sets the StretchFactorZ.
          * - :py:attr:`~SubsampleRate`
            - Gets or sets the SubsampleRate.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~SurfaceMeshMethod`
            - Gets or sets the SurfaceMeshMethod.
          * - :py:attr:`~SweepBiasType`
            - Gets or sets the SweepBiasType.
          * - :py:attr:`~SweepBiasValue`
            - Gets or sets the SweepBiasValue.
          * - :py:attr:`~SweepESizeType`
            - Gets or sets the SweepESizeType.
          * - :py:attr:`~SweepEdges`
            - Gets or sets the SweepEdges.
          * - :py:attr:`~SweepElementSize`
            - Gets or sets the SweepElementSize.
          * - :py:attr:`~SweepNumberDivisions`
            - Gets or sets the SweepNumberDivisions.
          * - :py:attr:`~SweepSizeBehavior`
            - Gets or sets the SweepSizeBehavior.
          * - :py:attr:`~SweepThickness`
            - Gets or sets the SweepThickness in Multizone.
          * - :py:attr:`~TargetLocation`
            - Gets or sets the TargetLocation.
          * - :py:attr:`~TetraGrowthRate`
            - Gets or sets the TetraGrowthRate.
          * - :py:attr:`~TriangleReduction`
            - Gets or sets the TriangleReduction.
          * - :py:attr:`~UseSplitAngle`
            - Gets or sets the UseSplitAngle in Multizone.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~WallThickness`
            - Gets or sets the WallThickness.
          * - :py:attr:`~WriteICEMCFDFiles`
            - Gets or sets the WriteICEMCFDFiles.







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Gets the Active.
















   ..
       !! processed by numpydoc !!

.. py:property:: AggressiveInflateOption
   :type: Optional[bool]


   
   Gets or sets the AggressiveInflateOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: AggressiveTetImprovement
   :type: Optional[bool]


   
   Gets or sets the AggressiveTetImprovement.
















   ..
       !! processed by numpydoc !!

.. py:property:: Algorithm
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MeshMethodAlgorithm]


   
   Gets or sets the Algorithm.
















   ..
       !! processed by numpydoc !!

.. py:property:: ApproximativeNumberOfElementsPerPart
   :type: Optional[int]


   
   Gets or sets the ApproximativeNumberOfElementsPerPart.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoCollapseShortEdges
   :type: Optional[Ansys.Mechanical.DataModel.Enums.YesNoType]


   
   Gets or sets the AutoCollapseShortEdges.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoPinchFaces
   :type: Optional[Ansys.Mechanical.DataModel.Enums.YesNoType]


   
   Gets or sets the AutoPinchFaces.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoPinchTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the AutoPinchTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoRemoveThinFaces
   :type: Optional[Ansys.Mechanical.DataModel.Enums.YesNoType]


   
   Gets or sets the AutoRemoveThinFaces.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoRepairFeatureAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the AutoRepairFeatureAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoRepairPartialDefeature
   :type: Optional[Ansys.Mechanical.DataModel.Enums.YesNoType]


   
   Gets or sets the AutoRepairPartialDefeature.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoSharpAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the AutoSharpAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoShortEdgeLength
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the AutoShortEdgeLength.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutoThinFaceWidth
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the AutoThinFaceWidth.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutomaticNodeMovement
   :type: Optional[Ansys.Mechanical.DataModel.Enums.AutomaticNodeMovementMethod]


   
   Gets or sets the AutomaticNodeMovement method under PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: BFCartSubType
   :type: Optional[int]


   
   Gets the BFCartSubType.
















   ..
       !! processed by numpydoc !!

.. py:property:: BFCartTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the BFCartTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: BodyStackingType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.BodyStackingType]


   
   Gets or sets the BodyStackingType.
















   ..
       !! processed by numpydoc !!

.. py:property:: CartSweepSpacingOption
   :type: Optional[int]


   
   Gets or sets the  CartSweep SpacingOption in Multizone ( 0 = Uniform, 1 = Key-Points).
















   ..
       !! processed by numpydoc !!

.. py:property:: CartesianSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the CartesianSize in Multizone.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Clearence
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Clearence.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConstrainBoundary
   :type: Optional[bool]


   
   Gets or sets the ConstrainBoundary.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlMessages
   :type: Optional[bool]


   
   Gets the ControlMessages.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the CoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: CornerAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the CornerAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: CurvatureNormalAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the CurvatureNormalAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DecompositionType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DecompositionType]


   
   Gets or sets the DecompositionType in Multizone.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefeatureLayerVolume
   :type: Optional[float]


   
   Gets or sets the DefeatureLayerVolume.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefeaturingTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the DefeaturingTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefinedBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PatchIndependentDefineType]


   
   Gets or sets the DefinedBy.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementMidsideNodes
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ElementMidsideNodesType]


   
   Gets or sets the ElementMidsideNodes.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SweepElementOptionType]


   
   Gets or sets the ElementOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementOrder
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ElementOrder]


   
   Gets or sets the ElementOrder.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceProximityGapFactor
   :type: Optional[float]


   
   Gets or sets the FaceProximityGapFactor for PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: FallBackMeshType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SweepAxisymmetricFallBackMeshType]


   
   Gets or sets the FallBackMeshType.
















   ..
       !! processed by numpydoc !!

.. py:property:: FeatureAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the FeatureAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: FeatureProtectionAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the DihedralAngle for AutoNodeMove under PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: FilletCollapse
   :type: Optional[int]


   
   Gets or sets the FilletCollapse for AutoNodeMove under PCTet ( 0 = No, 1 = ProgramControlled ).
















   ..
       !! processed by numpydoc !!

.. py:property:: FillingDirection
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CoordinateSystemAxisType]


   
   Gets or sets the FillingDirection.
















   ..
       !! processed by numpydoc !!

.. py:property:: FillingFraction
   :type: Optional[float]


   
   Gets or sets the FillingFraction.
















   ..
       !! processed by numpydoc !!

.. py:property:: FreeFaceMeshType
   :type: Optional[int]


   
   Gets or sets the FreeFaceMeshType.
















   ..
       !! processed by numpydoc !!

.. py:property:: FreeMeshType
   :type: Optional[int]


   
   Gets or sets the FreeMeshType.
















   ..
       !! processed by numpydoc !!

.. py:property:: GenerateLayersUsingFacets
   :type: Optional[bool]


   
   Gets or sets the GenerateLayersUsingFacets.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImprovementIterations
   :type: Optional[int]


   
   Gets or sets the ImprovementIterations for AutoNodeMove under PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: InflateRelativeTolerance
   :type: Optional[float]


   
   Gets or sets the InflateRelativeTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSMeshControlAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: KeyPointsSelection
   :type: Optional[Ansys.Mechanical.DataModel.Enums.AutomaticOrManual]


   
   Gets or sets the KeyPointsSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: KeyPointsTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the KeyPoints Tolerance in Multizone.
















   ..
       !! processed by numpydoc !!

.. py:property:: LateralDefeatureSize
   :type: Optional[float]


   
   Gets or sets the LateralDefeatureSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: LayerHeight
   :type: Optional[float]


   
   Gets or sets the LayerHeight.
















   ..
       !! processed by numpydoc !!

.. py:property:: LayerStart
   :type: Optional[float]


   
   Gets or sets the LayerStart.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: MZSweepNumberDivisions
   :type: Optional[int]


.. py:property:: MappedSweptType
   :type: Optional[int]


   
   Gets or sets the MappedSweptType.
















   ..
       !! processed by numpydoc !!

.. py:property:: MatchMeshWherePossible
   :type: Optional[bool]


   
   Gets or sets the MatchMeshWherePossible.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumElementSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MaximumElementSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshBasedDefeaturing
   :type: Optional[bool]


   
   Gets or sets the MeshBasedDefeaturing.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshFlowControl
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MeshFlowControlMethod]


   
   Gets or sets the MeshFlowControl.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshInCenter
   :type: Optional[int]


   
   Gets or sets the MeshInCenter.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MethodMeshType]


   
   Gets or sets the MeshType.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshUsingVoxelization
   :type: Optional[bool]


   
   Gets or sets the MeshUsingVoxelization.
















   ..
       !! processed by numpydoc !!

.. py:property:: Method
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MethodType]


   
   Gets or sets the Method.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumEdgeLength
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MinimumEdgeLength.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumSizeLimit
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MinimumSizeLimit.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumThickness
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MinimumThickness for PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NamedSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.NamedSelection]


   
   Gets or sets the NamedSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfCellsAcrossGap
   :type: Optional[int]


   
   Gets or sets the NumberOfCellsAcrossGap.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfElementLayers
   :type: Optional[int]


   
   Gets or sets the NumberOfElementLayers for PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: OverlappingAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the OverlappingAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PartialFill
   :type: Optional[bool]


   
   Gets or sets the PartialFill.
















   ..
       !! processed by numpydoc !!

.. py:property:: ParticleCoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the ParticleCoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: ParticleDiameter
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ParticleDiameter.
















   ..
       !! processed by numpydoc !!

.. py:property:: PreserveBoundaries
   :type: Optional[int]


   
   Gets or sets the PreserveBoundaries.
















   ..
       !! processed by numpydoc !!

.. py:property:: PrimeMethodAutoRepair
   :type: Optional[Ansys.Mechanical.DataModel.Enums.YesNoType]


   
   Gets or sets the PrimeMethodAutoRepair.
















   ..
       !! processed by numpydoc !!

.. py:property:: ProjectCornersToTop
   :type: Optional[bool]


   
   Gets or sets the ProjectCornersToTop.
















   ..
       !! processed by numpydoc !!

.. py:property:: ProjectInConstantZPlane
   :type: Optional[bool]


   
   Gets or sets the ProjectInConstantZPlane.
















   ..
       !! processed by numpydoc !!

.. py:property:: ProjectionFactor
   :type: Optional[float]


   
   Gets or sets the ProjectionFactor.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RadialGrowthRate
   :type: Optional[float]


   
   Gets or sets the RadialGrowthRate.
















   ..
       !! processed by numpydoc !!

.. py:property:: RefineAtThinSection
   :type: Optional[bool]


   
   Gets or sets the RefineAtThinSection for PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: RefineSurfaceMesh
   :type: Optional[bool]


   
   Gets or sets the RefineSurfaceMesh for PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: Refinement
   :type: Optional[int]


   
   Gets or sets the Refinement.
















   ..
       !! processed by numpydoc !!

.. py:property:: RelativeTolerance
   :type: Optional[float]


   
   Gets or sets the PrimeRelativeTolerance.
















   ..
       !! processed by numpydoc !!

.. py:property:: RemoveSharpAngleFaces
   :type: Optional[Ansys.Mechanical.DataModel.Enums.YesNoType]


   
   Gets or sets the RemoveSharpAngleFaces.
















   ..
       !! processed by numpydoc !!

.. py:property:: RepairFacets
   :type: Optional[bool]


   
   Gets or sets the RepairFacets.
















   ..
       !! processed by numpydoc !!

.. py:property:: RestrictNodeMovementsToSurface
   :type: Optional[bool]


   
   Gets or sets the RestrictNodeMovementsToSurface for AutoNodeMove under PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReuseBlocking
   :type: Optional[bool]


   
   Gets or sets the ReuseBlocking.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopingMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GeometryDefineByType]


   
   Gets or sets the ScopingMethod.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowAdvancedImproveOptions
   :type: Optional[bool]


   
   Gets or sets the ShowAdvancedImproveOptions for AutoNodeMove under PCTet.
















   ..
       !! processed by numpydoc !!

.. py:property:: SlicerFeatureAngle
   :type: Optional[float]


   
   Gets or sets the SlicerFeatureAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: SliverTriangleHeight
   :type: Optional[float]


   
   Gets or sets the SliverTriangleHeight.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothMeshSpacing
   :type: Optional[bool]


   
   Gets or sets the SmoothMeshSpacing in Multizone.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothTransition
   :type: Optional[bool]


   
   Gets or sets the SmoothTransition.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolidShellElementForStacker
   :type: Optional[Ansys.Mechanical.DataModel.Enums.YesNoType]


   
   Gets or sets the SolidShellElementForStacker.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolidShellElementForStackerGeometrySelection
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the SolidShellElementForStackerGeometrySelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolidShellElementForStackerNamedSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.NamedSelection]


   
   Gets or sets the SolidShellElementForStackerNamedSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolidShellElementForStackerScopingMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GeometryDefineByType]


   
   Gets or sets the SolidShellElementForStackerScopingMethod.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceLocation
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the SourceLocation.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetSelection
   :type: Optional[int]


   
   Gets or sets the SourceTargetSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: SpacingOption
   :type: Optional[int]


   
   Gets or sets the SpacingOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: SplitAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the SplitAngle in Multizone.
















   ..
       !! processed by numpydoc !!

.. py:property:: StackerCoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the StackerCoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: StackerFreeFaceMeshType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.StackerMethodMeshType]


   
   Gets or sets the StackerFreeFaceMeshType.
















   ..
       !! processed by numpydoc !!

.. py:property:: StackerTriangleReduction
   :type: Optional[Ansys.Mechanical.DataModel.Enums.TriangleReduction]


   
   Gets or sets the StackerTriangleReduction.
















   ..
       !! processed by numpydoc !!

.. py:property:: StackingAxis
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CoordinateSystemAxisType]


   
   Gets or sets the StackingAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: StackingDefeatureSize
   :type: Optional[float]


   
   Gets or sets the StackingDefeatureSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StretchFactorX
   :type: Optional[float]


   
   Gets or sets the StretchFactorX.
















   ..
       !! processed by numpydoc !!

.. py:property:: StretchFactorY
   :type: Optional[float]


   
   Gets or sets the StretchFactorY.
















   ..
       !! processed by numpydoc !!

.. py:property:: StretchFactorZ
   :type: Optional[float]


   
   Gets or sets the StretchFactorZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: SubsampleRate
   :type: Optional[int]


   
   Gets or sets the SubsampleRate.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceMeshMethod
   :type: Optional[int]


   
   Gets or sets the SurfaceMeshMethod.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepBiasType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.BiasType]


   
   Gets or sets the SweepBiasType.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepBiasValue
   :type: Optional[float]


   
   Gets or sets the SweepBiasValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepESizeType
   :type: Optional[int]


   
   Gets or sets the SweepESizeType.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepEdges
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the SweepEdges.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepElementSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the SweepElementSize.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepNumberDivisions
   :type: Optional[int]


   
   Gets or sets the SweepNumberDivisions.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepSizeBehavior
   :type: Optional[int]


   
   Gets or sets the SweepSizeBehavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepThickness
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the SweepThickness in Multizone.
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetLocation
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the TargetLocation.
















   ..
       !! processed by numpydoc !!

.. py:property:: TetraGrowthRate
   :type: Optional[float]


   
   Gets or sets the TetraGrowthRate.
















   ..
       !! processed by numpydoc !!

.. py:property:: TriangleReduction
   :type: Optional[Ansys.Mechanical.DataModel.Enums.TriangleReduction]


   
   Gets or sets the TriangleReduction.
















   ..
       !! processed by numpydoc !!

.. py:property:: UseSplitAngle
   :type: Optional[bool]


   
   Gets or sets the UseSplitAngle in Multizone.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: WallThickness
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the WallThickness.
















   ..
       !! processed by numpydoc !!

.. py:property:: WriteICEMCFDFiles
   :type: Optional[bool]


   
   Gets or sets the WriteICEMCFDFiles.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GenerateMesh() -> None

   
   Generate the Mesh.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnDefinition() -> None

   
   Run the RenameBasedOnDefinition action.

   ..
       !! processed by numpydoc !!



.. vale on